--- a/Webpage/Client/app/templates/updatepassword.html
+++ b/Webpage/Client/app/templates/updatepassword.html
@@ -21,11 +21,23 @@
 
 <div class="container">
     <h1>Update password</h1>
+    <div class="alert alert-warning" ng-hide="data">
+        All the required data is not inserted.
+    </div>
+    <div class="alert alert-warning" ng-hide="newpass">
+        The new passwords don't match.
+    </div>
+    <div class="alert alert-danger" ng-hide="oldpass">
+        The new passwords don't match.
+    </div>
+    <div class="alert alert-danger" ng-hide="updatepass">
+        Impossible to update the password.
+    </div>
     <form id="signupform" class="form-horizontal" role="form">
         <div class="form-group">
             <div class="col-md-12">
                 <div class="input-group">
-                    <input type="password" class="form-control" id="pass1" name="pass2" placeholder="New password">
+                    <input type="password" class="form-control" id="pass1" name="pass2" placeholder="New password" required="">
                     <span class="input-group-btn">
                         <button class="btn btn-default" type="button">?</button>
                     </span>
@@ -35,7 +47,7 @@
         <div class="form-group">
             <div class="col-md-12">
                 <div class="input-group">
-                    <input type="password" class="form-control" id="pass2" name="pass2" placeholder="Retype the new password">
+                    <input type="password" class="form-control" id="pass2" name="pass2" placeholder="Retype the new password" required="">
                     <span class="input-group-btn">
                         <button class="btn btn-default" type="button">?</button>
                     </span>
@@ -44,12 +56,12 @@
         </div>
         <div class="form-group">
             <div class="col-md-12">
-                <input type="password" class="form-control" id="oldpass" name="oldpass" placeholder="Old password for checking">
+                <input type="password" class="form-control" id="oldpass" name="oldpass" placeholder="Old password for checking" required="">
             </div>
         </div>
         <div class="form-group">
             <div class="col-md-offset-0 col-md-12">
-                <button id="btn-signup" type="submit" class="btn btn-info">Update password</button>
+                <button id="btn-signup" type="button" class="btn btn-info" ng-click="updatePassword()">Update password</button>
             </div>
         </div>
     </form>
