--- a/Webpage/Client/app/templates/signin.html
+++ b/Webpage/Client/app/templates/signin.html
@@ -15,12 +15,12 @@
         <form class="form-horizontal">
             <div class="form-group">
                 <div class="col-sm-12">
-                    <input type="text" class="form-control" id="user" placeholder="Username" required="">
+                    <input type="text" class="form-control" id="user" placeholder="Username" ng-model="user" required="">
                 </div>
             </div>
             <div class="form-group">
                 <div class="col-sm-12">
-                    <input type="password" class="form-control" id="pass" placeholder="Password" required="">
+                    <input type="password" class="form-control" id="pass" placeholder="Password" ng-model="pass" required="">
                 </div>
             </div>
             <div class="form-group">
@@ -48,7 +48,7 @@
             <div class="form-group">
                 <div class="col-md-12">
                     <div class="input-group">
-                        <input type="text" class="form-control" id="username" name="user" placeholder="Username" required="">
+                        <input type="text" class="form-control" id="username" name="user" placeholder="Username" ng-model="username" required="">
                         <span class="input-group-btn">
                             <button class="btn btn-default" type="submit">?</button>
                         </span>
@@ -58,7 +58,7 @@
             <div class="form-group">
                 <div class="col-md-12">
                     <div class="input-group">
-                        <input type="text" class="form-control" id="email" name="email" placeholder="Email" required="">
+                        <input type="text" class="form-control" id="email" name="email" placeholder="Email" ng-model="email" required="">
                         <span class="input-group-btn">
                             <button class="btn btn-default" type="submit">?</button>
                         </span>
@@ -68,7 +68,7 @@
             <div class="form-group">
                 <div class="col-md-12">
                     <div class="input-group">
-                        <input type="text" class="form-control" id="firstname" name="firstname" placeholder="First name" required="">
+                        <input type="text" class="form-control" id="firstname" name="firstname" placeholder="First name" ng-model="firstname" required="">
                         <span class="input-group-btn">
                             <button class="btn btn-default" type="submit">?</button>
                         </span>
@@ -78,7 +78,7 @@
             <div class="form-group">
                 <div class="col-md-12">
                     <div class="input-group">
-                        <input type="text" class="form-control" id="lastname" name="lastname" placeholder="Last name" required="">
+                        <input type="text" class="form-control" id="lastname" name="lastname" placeholder="Last name" ng-model="lastname" required="">
                         <span class="input-group-btn">
                             <button class="btn btn-default" type="submit">?</button>
                         </span>
@@ -88,7 +88,7 @@
             <div class="form-group">
                 <div class="col-md-12">
                     <div class="input-group">
-                        <input type="password" class="form-control" id="password" name="password" placeholder="Password" required="">
+                        <input type="password" class="form-control" id="password" name="password" placeholder="Password" ng-model="password" required="">
                         <span class="input-group-btn">
                             <button class="btn btn-default" type="submit">?</button>
                         </span>
@@ -98,7 +98,7 @@
             <div class="form-group">
                 <div class="col-md-12">
                     <div class="input-group">
-                        <input type="password" class="form-control" id="password2" name="password2" placeholder="Retype the password" required="">
+                        <input type="password" class="form-control" id="password2" name="password2" placeholder="Retype the password" ng-model="password2" required="">
                         <span class="input-group-btn">
                             <button class="btn btn-default" type="submit">?</button>
                         </span>
