--- a/Webpage/Client/app/templates/profile.html
+++ b/Webpage/Client/app/templates/profile.html
@@ -25,7 +25,7 @@
         <div class="form-group">
             <div class="col-md-12">
                 <div class="input-group">
-                    <input type="text" class="form-control" id="email" name="email" placeholder="Email Address">
+                    <input type="text" class="form-control" id="email" name="email" placeholder="Email Address" ng-model="email">
                     <span class="input-group-btn">
                         <button class="btn btn-default" type="submit">?</button>
                     </span>
@@ -35,7 +35,7 @@
         <div class="form-group">
             <div class="col-md-12">
                 <div class="input-group">
-                    <input type="text" class="form-control" id="firstname" name="firstname" placeholder="First Name">
+                    <input type="text" class="form-control" id="firstname" name="firstname" placeholder="First Name" ng-model="firstname">
                     <span class="input-group-btn">
                         <button class="btn btn-default" type="submit">?</button>
                     </span>
@@ -45,7 +45,7 @@
         <div class="form-group">
             <div class="col-md-12">
                 <div class="input-group">
-                    <input type="text" class="form-control" id="lastname" name="lastname" placeholder="Last Name">
+                    <input type="text" class="form-control" id="lastname" name="lastname" placeholder="Last Name" ng-model="lastname">
                     <span class="input-group-btn">
                         <button class="btn btn-default" type="submit">?</button>
                     </span>
@@ -55,7 +55,7 @@
         <div class="form-group">
             <div class="col-md-12">
                 <div class="input-group">
-                    <input type="password" class="form-control" id="password" name="password" placeholder="Password">
+                    <input type="password" class="form-control" id="password" name="password" placeholder="Password" ng-model="password" required="">
                     <span class="input-group-btn">
                         <button class="btn btn-default" type="submit">?</button>
                     </span>
@@ -64,7 +64,7 @@
         </div>
         <div class="form-group">
             <div class="col-md-offset-0 col-md-12">
-                <button id="btn-signup" type="button" class="btn btn-info">Update profile</button>
+                <button id="btn-signup" type="button" class="btn btn-info" ng-click="updateProfile()">Update profile</button>
             </div>
         </div>
     </form>
