--- a/Webpage/Client/app/templates/updatepassword.html
+++ b/Webpage/Client/app/templates/updatepassword.html
@@ -37,7 +37,7 @@
         <div class="form-group">
             <div class="col-md-12">
                 <div class="input-group">
-                    <input type="password" class="form-control" id="pass1" name="pass2" placeholder="New password" required="">
+                    <input type="password" class="form-control" id="pass1" name="pass1" placeholder="New password" ng-model="newpass" required="">
                     <span class="input-group-btn">
                         <button class="btn btn-default" type="button">?</button>
                     </span>
@@ -47,7 +47,7 @@
         <div class="form-group">
             <div class="col-md-12">
                 <div class="input-group">
-                    <input type="password" class="form-control" id="pass2" name="pass2" placeholder="Retype the new password" required="">
+                    <input type="password" class="form-control" id="pass2" name="pass2" placeholder="Retype the new password" ng-model="reppass" required="">
                     <span class="input-group-btn">
                         <button class="btn btn-default" type="button">?</button>
                     </span>
@@ -56,7 +56,7 @@
         </div>
         <div class="form-group">
             <div class="col-md-12">
-                <input type="password" class="form-control" id="oldpass" name="oldpass" placeholder="Old password for checking" required="">
+                <input type="password" class="form-control" id="oldpass" name="oldpass" placeholder="Old password for checking" ng-model="oldpass" required="">
             </div>
         </div>
         <div class="form-group">
