Minor errors corrected about warnings.

--- a/Webpage/Client/app/templates/updatepassword.html
+++ b/Webpage/Client/app/templates/updatepassword.html
@@ -28,7 +28,7 @@
         The new passwords don't match.
     </div>
     <div class="alert alert-danger" ng-hide="oldpass">
-        The new passwords don't match.
+        The old password doesn't match.
     </div>
     <div class="alert alert-danger" ng-hide="updatepass">
         Impossible to update the password.
