--- a/Webpage/Client/app/templates/profile.html
+++ b/Webpage/Client/app/templates/profile.html
@@ -21,7 +21,18 @@
 
 <div class="container">
     <h1>My profile</h1>
+    <div class="alert alert-danger" ng-hide="pass">
+        The password doesn't match.
+    </div>
+    <div class="alert alert-danger" ng-hide="impossible">
+        Impossible to update the profile.
+    </div>
     <form id="signupform" class="form-horizontal" role="form">
+        <div class="form-group">
+            <div class="col-md-12">
+                <input type="text" class="form-control" id="user" name="user" placeholder="Username" ng-model="user" disabled="disabled">
+            </div>
+        </div>
         <div class="form-group">
             <div class="col-md-12">
                 <div class="input-group">
