--- a/Webpage/Client/app/templates/profile.html
+++ b/Webpage/Client/app/templates/profile.html
@@ -36,7 +36,7 @@
         <div class="form-group">
             <div class="col-md-12">
                 <div class="input-group">
-                    <input type="text" class="form-control" id="email" name="email" placeholder="Email Address" ng-model="email">
+                    <input type="text" class="form-control" id="email" name="email" placeholder="Email address" ng-model="email">
                     <span class="input-group-btn">
                         <button class="btn btn-default" type="submit">?</button>
                     </span>
@@ -46,7 +46,7 @@
         <div class="form-group">
             <div class="col-md-12">
                 <div class="input-group">
-                    <input type="text" class="form-control" id="firstname" name="firstname" placeholder="First Name" ng-model="firstname">
+                    <input type="text" class="form-control" id="firstname" name="firstname" placeholder="First name" ng-model="firstname">
                     <span class="input-group-btn">
                         <button class="btn btn-default" type="submit">?</button>
                     </span>
@@ -56,7 +56,7 @@
         <div class="form-group">
             <div class="col-md-12">
                 <div class="input-group">
-                    <input type="text" class="form-control" id="lastname" name="lastname" placeholder="Last Name" ng-model="lastname">
+                    <input type="text" class="form-control" id="lastname" name="lastname" placeholder="Last name" ng-model="lastname">
                     <span class="input-group-btn">
                         <button class="btn btn-default" type="submit">?</button>
                     </span>
@@ -75,7 +75,8 @@
         </div>
         <div class="form-group">
             <div class="col-md-offset-0 col-md-12">
-                <button id="btn-signup" type="button" class="btn btn-info" ng-click="updateProfile()">Update profile</button>
+                <button id="btn-update" type="button" class="btn btn-info" ng-click="updateProfile()">Update profile</button>
+                <button id="btn-signout" type="button" class="btn btn-danger" ng-click="signOut()">Sign out</button>
             </div>
         </div>
     </form>
