Getting user data from server. Updating the form alerts.

--- a/Webpage/Client/app/templates/profile.html
+++ b/Webpage/Client/app/templates/profile.html
@@ -27,6 +27,12 @@
     <div class="alert alert-danger" ng-hide="impossible">
         Impossible to update the profile.
     </div>
+    <div class="alert alert-danger" ng-hide="r_impossible">
+        Impossible to retrieve your user profile.
+    </div>
+    <div class="alert alert-success" ng-hide="successful">
+        Profile updated successfully.
+    </div>
     <form id="signupform" class="form-horizontal" role="form">
         <div class="form-group">
             <div class="col-md-12">
