Webpage working (not the search part).

--- a/Webpage/Client/app/templates/profile.html
+++ b/Webpage/Client/app/templates/profile.html
@@ -42,7 +42,7 @@
         <div class="form-group">
             <div class="col-md-12">
                 <div class="input-group">
-                    <input type="text" class="form-control" id="email" name="email" placeholder="Email address" ng-model="email">
+                    <input type="text" class="form-control" id="email" name="email" placeholder="Email address" ng-model="email" disabled="disabled">
                     <span class="input-group-btn">
                         <button class="btn btn-default" type="submit">?</button>
                     </span>
@@ -71,12 +71,7 @@
         </div>
         <div class="form-group">
             <div class="col-md-12">
-                <div class="input-group">
-                    <input type="password" class="form-control" id="password" name="password" placeholder="Password" ng-model="password" required="">
-                    <span class="input-group-btn">
-                        <button class="btn btn-default" type="submit">?</button>
-                    </span>
-                </div>
+                <input type="password" class="form-control" id="password" name="password" placeholder="Enter your password to update your profile" ng-model="password" required="">
             </div>
         </div>
         <div class="form-group">
