--- a/Webpage/Client/app/templates/updatepassword.html
+++ b/Webpage/Client/app/templates/updatepassword.html
@@ -33,11 +33,14 @@
     <div class="alert alert-danger" ng-hide="updatepass">
         Impossible to update the password.
     </div>
+    <div class="alert alert-success" ng-hide="successful">
+        Password updated successfully.
+    </div>
     <form id="signupform" class="form-horizontal" role="form">
         <div class="form-group">
             <div class="col-md-12">
                 <div class="input-group">
-                    <input type="password" class="form-control" id="pass1" name="pass1" placeholder="New password" ng-model="newpass" required="">
+                    <input type="password" class="form-control" id="pass1" name="pass1" placeholder="New password" ng-model="newpass" required="required">
                     <span class="input-group-btn">
                         <button class="btn btn-default" type="button">?</button>
                     </span>
@@ -47,7 +50,7 @@
         <div class="form-group">
             <div class="col-md-12">
                 <div class="input-group">
-                    <input type="password" class="form-control" id="pass2" name="pass2" placeholder="Retype the new password" ng-model="reppass" required="">
+                    <input type="password" class="form-control" id="pass2" name="pass2" placeholder="Retype the new password" ng-model="reppass" required="required">
                     <span class="input-group-btn">
                         <button class="btn btn-default" type="button">?</button>
                     </span>
@@ -56,7 +59,7 @@
         </div>
         <div class="form-group">
             <div class="col-md-12">
-                <input type="password" class="form-control" id="oldpass" name="oldpass" placeholder="Old password for checking" ng-model="oldpass" required="">
+                <input type="password" class="form-control" id="oldpass" name="oldpass" placeholder="Old password for checking" ng-model="oldpass" required="required">
             </div>
         </div>
         <div class="form-group">
