Menu links updated.

--- a/Webpage/Client/app/templates/nowsearching.html
+++ b/Webpage/Client/app/templates/nowsearching.html
@@ -1,6 +1,6 @@
 <ol class="breadcrumb putdown">
     <li><a href="#/main">Home</a></li>
-    <li><a href="#">Searches</a></li>
+    <li><a href="#/allsearches">Searches</a></li>
     <li class="active">Now searching...</li>
 </ol>
 
