--- a/Webpage/Client/app/templates/updatepassword.html
+++ b/Webpage/Client/app/templates/updatepassword.html
@@ -1,18 +1,18 @@
 <ol class="breadcrumb putdown">
     <li><a href="#/main">Home</a></li>
-    <li><a href="#">My account</a></li>
+    <li><a href="#/profile">My account</a></li>
     <li class="active">Update password</li>
 </ol>
 
 <div id="sidebar-wrapper">
     <ul class="sidebar-nav">
         <li class="sidebar-brand">
-            <a href="#">My account</a>
+            <a href="#/profile">My account</a>
         </li>
         <li><a href="#/profile">My profile</a></li>
         <li><a href="#/updatepassword">Update password</a></li>
         <li class="sidebar-brand">
-            <a href="#">Searches</a>
+            <a href="#/allsearches">Searches</a>
         </li>
         <li><a href="#/allsearches">All searches</a></li>
         <li><a href="#/nowsearching">Now searching...</a></li>
