Web design updated. Tootips done.

--- a/Webpage/Client/app/css/app.css
+++ b/Webpage/Client/app/css/app.css
@@ -1,98 +1,28 @@
-/* app css stylesheet */
-
-.menu {
-  list-style: none;
-  border-bottom: 0.1em solid black;
-  margin-bottom: 2em;
-  padding: 0 0 0.5em;
+.padding {
+    padding-top: 5%;
 }
 
-.menu:before {
-  content: "[";
+.less-padding {
+    padding-top: 20px;
 }
 
-.menu:after {
-  content: "]";
+.center {
+    padding-top: 15px;
+    float: none;
+    margin-left: auto;
+    margin-right: auto;
+    justify-content: center;
+    /*background-color: #F8F8F8;*/
 }
 
-.menu > li {
-  display: inline;
+/*http://stackoverflow.com/questions/9421966/how-do-i-center-the-twitter-bootstrap-tabs-on-the-page*/
+.nav-tabs.centered > li, .nav-pills.centered > li {
+    float:none;
+    display:inline-block;
+    *display:inline; /* ie7 fix */
+     zoom:1; /* hasLayout ie7 trigger */
 }
 
-.menu > li:before {
-  content: "|";
-  padding-right: 0.3em;
-}
-
-.menu > li:nth-child(1):before {
-  content: "";
-  padding: 0;
-}
-
-/*https://css-tricks.com/forums/topic/vertically-center-with-bootstrap/*/
-.vertical-center {
-  position: absolute;
-  top: 50%;
-  left:50%;
-  transform: translate(-50%,-50%);
-}
-
-/*http://startbootstrap.com/template-overviews/simple-sidebar/*/
-#sidebar-wrapper {
-    z-index: 1000;
-    position: fixed;
-    -webkit-transition: all 0.5s ease;
-    -moz-transition: all 0.5s ease;
-    -o-transition: all 0.5s ease;
-    transition: all 0.5s ease;
-}
-
-.sidebar-nav {
-    position: absolute;
-    top: 0;
-    width: 200px;
-    margin: 0;
-    padding: 10px 0 0 0;
-    list-style: none;
-}
-
-.sidebar-nav li {
-    text-indent: 20px;
-    line-height: 40px;
-}
-
-.sidebar-nav li a {
-    display: block;
-    text-decoration: none;
-    color: #999999;
-}
-
-.sidebar-nav li a:hover {
-    text-decoration: none;
-    color: #fff;
-    background: rgba(255,255,255,0.2);
-}
-
-.sidebar-nav li a:active, .sidebar-nav li a:focus {
-    text-decoration: none;
-}
-
-.sidebar-nav > .sidebar-brand {
-    height: 65px;
-    font-size: 18px;
-    line-height: 60px;
-}
-
-.sidebar-nav > .sidebar-brand a {
-    color: #999999;
-}
-
-.sidebar-nav > .sidebar-brand a:hover {
-    color: #fff;
-    background: none;
-}
-
-
-.putdown {
-    margin-top: 20px;
+.nav-tabs.centered, .nav-pills.centered {
+    text-align:center;
 }
