--- a/Webpage/Client/app/templates/allsearches.html
+++ b/Webpage/Client/app/templates/allsearches.html
@@ -1,26 +1,14 @@
-<ol class="breadcrumb putdown">
-    <li><a href="#/main">Home</a></li>
-    <li><a href="">Searches</a></li>
-    <li class="active">All searches</li>
-</ol>
-
-<div id="sidebar-wrapper">
-    <ul class="sidebar-nav">
-        <li class="sidebar-brand">
-            <a href="#/profile">My account</a>
-        </li>
+<div class="navbar navbar-default center">
+    <ul class="nav nav-tabs centered">
         <li><a href="#/profile">My profile</a></li>
         <li><a href="#/updatepassword">Update password</a></li>
-        <li class="sidebar-brand">
-            <a href="">Searches</a>
-        </li>
-        <li><a href="#/allsearches">All searches</a></li>
+        <li class="active"><a href="#/allsearches">My searches</a></li>
         <li><a href="#/nowsearching">Now searching...</a></li>
     </ul>
 </div>
 
 <div class="container">
-    <h1>All searches (Disabled, sorry)</h1>
+    <h1>My searches (Disabled, sorry)</h1>
     <div class="alert alert-info" ng-hide="searching">
         Recovering searches information.
     </div>
