--- a/Webpage/Client/app/templates/updatepassword.html
+++ b/Webpage/Client/app/templates/updatepassword.html
@@ -1,20 +1,8 @@
-<ol class="breadcrumb putdown">
-    <li><a href="#/main">Home</a></li>
-    <li><a href="#/profile">My account</a></li>
-    <li class="active">Update password</li>
-</ol>
-
-<div id="sidebar-wrapper">
-    <ul class="sidebar-nav">
-        <li class="sidebar-brand">
-            <a href="#/profile">My account</a>
-        </li>
+<div class="navbar navbar-default center">
+    <ul class="nav nav-tabs centered">
         <li><a href="#/profile">My profile</a></li>
-        <li><a href="#/updatepassword">Update password</a></li>
-        <li class="sidebar-brand">
-            <a href="#/allsearches">Searches</a>
-        </li>
-        <li><a href="#/allsearches">All searches</a></li>
+        <li class="active"><a href="#/updatepassword">Update password</a></li>
+        <li><a href="#/allsearches">My searches</a></li>
         <li><a href="#/nowsearching">Now searching...</a></li>
     </ul>
 </div>
@@ -36,35 +24,31 @@
     <div class="alert alert-success" ng-hide="successful">
         Password updated successfully.
     </div>
-    <form id="signupform" class="form-horizontal" role="form">
+    <form id="signupform" class="form-horizontal" role="form" ng-submit="updatePassword()">
+        <div class="form-group">
+            <div class="col-md-12">
+                <input type="password" class="form-control" id="oldpass" name="oldpass" placeholder="Old password for checking" ng-model="oldpass" required>
+            </div>
+        </div>
         <div class="form-group">
             <div class="col-md-12">
                 <div class="input-group">
-                    <input type="password" class="form-control" id="pass1" name="pass1" placeholder="New password" ng-model="newpass" required="required">
-                    <span class="input-group-btn">
-                        <button class="btn btn-default" type="button">?</button>
-                    </span>
+                    <input type="password" class="form-control" id="pass1" name="pass1" placeholder="New password" ng-model="newpass" pattern=".{6,}" required autofocus>
+                    <span class="input-group-addon" data-toggle="tooltip" title="6 characters min.">?</span>
                 </div>
             </div>
         </div>
         <div class="form-group">
             <div class="col-md-12">
                 <div class="input-group">
-                    <input type="password" class="form-control" id="pass2" name="pass2" placeholder="Retype the new password" ng-model="reppass" required="required">
-                    <span class="input-group-btn">
-                        <button class="btn btn-default" type="button">?</button>
-                    </span>
+                    <input type="password" class="form-control" id="pass2" name="pass2" placeholder="Retype the new password" ng-model="reppass" pattern=".{6,}" required>
+                    <span class="input-group-addon" data-toggle="tooltip" title="6 characters min.">?</span>
                 </div>
-            </div>
-        </div>
-        <div class="form-group">
-            <div class="col-md-12">
-                <input type="password" class="form-control" id="oldpass" name="oldpass" placeholder="Old password for checking" ng-model="oldpass" required="required">
             </div>
         </div>
         <div class="form-group">
             <div class="col-md-offset-0 col-md-12">
-                <button id="btn-signup" type="button" class="btn btn-info" ng-click="updatePassword()">Update password</button>
+                <button id="btn-signup" type="submit" class="btn btn-info" ng-click="updatePassword()">Update password</button>
             </div>
         </div>
     </form>
