--- a/Webpage/Client/app/templates/nowsearching.html
+++ b/Webpage/Client/app/templates/nowsearching.html
@@ -1,21 +1,9 @@
-<ol class="breadcrumb putdown">
-    <li><a href="#/main">Home</a></li>
-    <li><a href="#/allsearches">Searches</a></li>
-    <li class="active">Now searching...</li>
-</ol>
-
-<div id="sidebar-wrapper">
-    <ul class="sidebar-nav">
-        <li class="sidebar-brand">
-            <a href="#">My account</a>
-        </li>
+<div class="navbar navbar-default center">
+    <ul class="nav nav-tabs centered">
         <li><a href="#/profile">My profile</a></li>
         <li><a href="#/updatepassword">Update password</a></li>
-        <li class="sidebar-brand">
-            <a href="#">Searches</a>
-        </li>
-        <li><a href="#/allsearches">All searches</a></li>
-        <li><a href="#/nowsearching">Now searching...</a></li>
+        <li><a href="#/allsearches">My searches</a></li>
+        <li class="active"><a href="#/nowsearching">Now searching...</a></li>
     </ul>
 </div>
 
