--- a/Webpage/Client/app/templates/signin.html
+++ b/Webpage/Client/app/templates/signin.html
@@ -1,9 +1,4 @@
-<ol class="breadcrumb putdown">
-    <li><a href="#/main">Home</a></li>
-    <li class="active">Sign in</li>
-</ol>
-
-<div class="container">
+<div class="container less-padding">
     <div class="col-md-5">
         <h1>Sign in</h1>
         <div class="alert alert-warning" ng-hide="in_data">
@@ -12,20 +7,23 @@
         <div class="alert alert-danger" ng-hide="in_impossible">
             Impossible to sign in.
         </div>
-        <form class="form-horizontal">
+        <form class="form-horizontal" ng-submit="signin()">
             <div class="form-group">
                 <div class="col-sm-12">
-                    <input type="text" class="form-control" id="user" placeholder="Username" ng-model="user" required="required">
+                    <div class="input-group">
+                        <span class="input-group-addon">@</span>
+                        <input type="text" class="form-control" id="user" placeholder="Username" ng-model="user" required autofocus>
+                    </div>
                 </div>
             </div>
             <div class="form-group">
                 <div class="col-sm-12">
-                    <input type="password" class="form-control" id="pass" placeholder="Password" ng-model="pass" required="required">
+                    <input type="password" class="form-control" id="pass" placeholder="Password" ng-model="pass" required>
                 </div>
             </div>
             <div class="form-group">
                 <div class="col-sm-offset-0 col-sm-12">
-                    <button type="button" class="btn btn-info" ng-click="signin()">Sign in</button>
+                    <button type="submit" class="btn btn-info" ng-click="signin()">Sign in</button>
                 </div>
             </div>
         </form>
@@ -47,70 +45,59 @@
         <div class="alert alert-danger" ng-hide="up_impossible">
             Impossible to sign up.
         </div>
-        <form id="signupform" class="form-horizontal" role="form">
+        <form id="signupform" class="form-horizontal" role="form" ng-submit="signup()">
             <div class="form-group">
                 <div class="col-md-12">
                     <div class="input-group">
-                        <input type="text" class="form-control" id="username" name="user" placeholder="Username" ng-model="username" required="required">
-                        <span class="input-group-btn">
-                            <button class="btn btn-default" type="submit">?</button>
-                        </span>
+                        <span class="input-group-addon">@</span>
+                        <input type="text" class="form-control" id="username" name="user" placeholder="Username" ng-model="username" pattern=".{3,}" required>
+                        <span class="input-group-addon" data-toggle="tooltip" title="3 characters min.">?</span>
                     </div>
                 </div>
             </div>
             <div class="form-group">
                 <div class="col-md-12">
                     <div class="input-group">
-                        <input type="text" class="form-control" id="email" name="email" placeholder="Email" ng-model="email" required="required">
-                        <span class="input-group-btn">
-                            <button class="btn btn-default" type="submit">?</button>
-                        </span>
+                        <input type="email" class="form-control" id="email" name="email" placeholder="Email" ng-model="email" required>
+                        <span class="input-group-addon" data-toggle="tooltip" title="Must exist.">?</span>
                     </div>
                 </div>
             </div>
             <div class="form-group">
                 <div class="col-md-12">
                     <div class="input-group">
-                        <input type="text" class="form-control" id="firstname" name="firstname" placeholder="First name" ng-model="firstname" required="required">
-                        <span class="input-group-btn">
-                            <button class="btn btn-default" type="submit">?</button>
-                        </span>
+                        <input type="text" class="form-control" id="firstname" name="firstname" placeholder="First name" ng-model="firstname" pattern=".{2,}" required>
+                        <span class="input-group-addon" data-toggle="tooltip" title="2 characters min.">?</span>
                     </div>
                 </div>
             </div>
             <div class="form-group">
                 <div class="col-md-12">
                     <div class="input-group">
-                        <input type="text" class="form-control" id="lastname" name="lastname" placeholder="Last name" ng-model="lastname" required="required">
-                        <span class="input-group-btn">
-                            <button class="btn btn-default" type="submit">?</button>
-                        </span>
+                        <input type="text" class="form-control" id="lastname" name="lastname" placeholder="Last name" ng-model="lastname" pattern=".{2,}" required>
+                        <span class="input-group-addon" data-toggle="tooltip" title="2 characters min.">?</span>
                     </div>
                 </div>
             </div>
             <div class="form-group">
                 <div class="col-md-12">
                     <div class="input-group">
-                        <input type="password" class="form-control" id="password" name="password" placeholder="Password" ng-model="password" required="required">
-                        <span class="input-group-btn">
-                            <button class="btn btn-default" type="submit">?</button>
-                        </span>
+                        <input type="password" class="form-control" id="password" name="password" placeholder="Password" ng-model="password" pattern=".{6,}" required>
+                        <span class="input-group-addon" data-toggle="tooltip" title="6 characters min.">?</span>
                     </div>
                 </div>
             </div>
             <div class="form-group">
                 <div class="col-md-12">
                     <div class="input-group">
-                        <input type="password" class="form-control" id="password2" name="password2" placeholder="Retype the password" ng-model="password2" required="required">
-                        <span class="input-group-btn">
-                            <button class="btn btn-default" type="submit">?</button>
-                        </span>
+                        <input type="password" class="form-control" id="password2" name="password2" placeholder="Retype the password" ng-model="password2" pattern=".{6,}" required>
+                        <span class="input-group-addon" data-toggle="tooltip" title="6 characters min.">?</span>
                     </div>
                 </div>
             </div>
             <div class="form-group">
                 <div class="col-md-offset-0 col-md-12">
-                    <button id="btn-signup" type="button" class="btn btn-info" ng-click="signup()">Sign up</button>
+                    <button id="btn-signup" type="submit" class="btn btn-info" ng-click="signup()">Sign up</button>
                 </div>
             </div>
         </form>
