Changes to make sockets work. They didn't :'(

--- a/Webpage/Client/app/templates/allsearches.html
+++ b/Webpage/Client/app/templates/allsearches.html
@@ -15,5 +15,6 @@
     <div class="alert alert-danger" ng-hide="no_search">
         Currently, there are no searches executed.
     </div>
+    {{hey}}
     <searches></searches>
 </div>
