Some errors solved. Populate doesn't work. Directives are shown.

--- a/Webpage/Client/app/templates/allsearches.html
+++ b/Webpage/Client/app/templates/allsearches.html
@@ -8,13 +8,12 @@
 </div>
 
 <div class="container">
-    <h1>My searches (Disabled, sorry)</h1>
+    <h1>My searches</h1>
     <div class="alert alert-info" ng-hide="searching">
         Recovering searches information.
     </div>
     <div class="alert alert-danger" ng-hide="no_search">
         Currently, there are no searches executed.
     </div>
-    {{hey}}
     <searches></searches>
 </div>
