--- a/Webpage/Client/app/templates/directives/search.html
+++ b/Webpage/Client/app/templates/directives/search.html
@@ -1,9 +1,9 @@
 <div class="card" ui-sref="edition({search_ID: $index})">
     <div class="item item-divider">
-        {{search.NO_ID.WEB}}
+        {{search._id}}
     </div>
     <div class="item item-text-wrap">
-        {{search.NO_ID.DATE}}
+        {{search.NO_ID._id}}
     </div>
     <div class="item item-divider">
         <vulnerabilities></vulnerabilities>
